--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "hbs": "^4.2.0",
+    "lodash": "^4.17.21",
     "nodemon": "^2.0.15",
     "request": "^2.88.2"
   }
